# ChangeLog for media-libs/libvorbis
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.116 2009/06/13 14:08:37 armin76 Exp $

  13 Jun 2009; Raúl Porcel <armin76@gentoo.org>
  libvorbis-1.2.1_rc1-r2.ebuild:
  arm/ia64/sh/sparc stable wrt #271376

  04 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  libvorbis-1.2.1_rc1-r2.ebuild:
  Stable on alpha, bug #271376

  31 May 2009; Brent Baude <ranger@gentoo.org>
  libvorbis-1.2.1_rc1-r2.ebuild:
  stable ppc64, bug 271376

  30 May 2009; nixnut <nixnut@gentoo.org> libvorbis-1.2.1_rc1-r2.ebuild:
  ppc stable #271376

  27 May 2009; Christian Faulhammer <fauli@gentoo.org>
  libvorbis-1.2.1_rc1-r2.ebuild:
  stable x86, bug 271376

  27 May 2009; Richard Freeman <rich0@gentoo.org>
  libvorbis-1.2.1_rc1-r2.ebuild:
  amd64 stable - 271376

  27 May 2009; Jeroen Roovers <jer@gentoo.org>
  libvorbis-1.2.1_rc1-r2.ebuild:
  Stable for HPPA (bug #271376).

*libvorbis-1.2.1_rc1-r3 (27 May 2009)

  27 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libvorbis-1.2.1_rc1-r3.ebuild:
  Version bump aoTuV to beta 5.7 wrt #262472, thanks to Nikos Chantziaras
  for reporting.

*libvorbis-1.2.1_rc1-r2 (15 Dec 2008)

  15 Dec 2008; Ben de Groot <yngwin@gentoo.org>
  +libvorbis-1.2.1_rc1-r2.ebuild:
  Updating aoTuV patch to b5.6-20081209 (which actually includes
  libvorbis-1.2.1-rc2). Fixes bug 250890.

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/libvorbis-1.2.0-CVE-2008-1419.patch,
  files/libvorbis-1.2.0-CVE-2008-1420.patch,
  files/libvorbis-1.2.0-CVE-2008-1423.patch:
  Fix patch with absolute paths.

  06 Aug 2008; Ben de Groot <yngwin@gentoo.org>
  libvorbis-1.2.1_rc1-r1.ebuild:
  Correct the src_uri

  18 Jul 2008; Ben de Groot <yngwin@gentoo.org> metadata.xml:
  Add GLEP 56 USE flag description for aotuv.

*libvorbis-1.2.1_rc1-r1 (17 Jul 2008)

  17 Jul 2008; Ben de Groot <yngwin@gentoo.org>