@@ -1,10 +1,10 @@
-DIST aotuv-b5.5-1.2.1rc1.diff.bz2 41005 RMD160 37c15676ddbffea0a2590a23543e26e960d86a13 SHA1 0926698b909c895c86e7bffa54209cdaf0dc1cc6 SHA256 f1ebe88d5b6d4f2249effa215256bbe4755a9573dfcf10b3ebf02641daa48fac
 DIST aotuv-b5.6-1.2.1rc1.diff.bz2 87102 RMD160 7242e12e4dfa4de3f69e5e0817e6baea1fb06a70 SHA1 edc0c39391a573a0f26cd8e76fe1f0139445d71f SHA256 4ad9c62bda2ebff1731fff15bf23e799d87d88723d2ac60a2486b8376c0cc9e4
 DIST libvorbis-1.2.1_rc1-aotuv_beta5.7.patch.bz2 144982 RMD160 67936862bfb8933618f77f3aa80f4dcfe64ef914 SHA1 5fe09c43edcf1fc58908f3dc945c87de7102c295 SHA256 66c26ef0ee5c13a56c2a60ef0eb079fa0d3569dcfbd18b05b9449392d2b78790
 DIST libvorbis-1.2.1rc1.tar.bz2 1175156 RMD160 f99900fdac5dcd91e7b3011eadda1cd499d8450e SHA1 25c8713fec0de238d56603812abd433115a8c091 SHA256 565d8b3565dfab1ca08c374c0ef1ba66d3cb47292537cdc40f86f227c51cf316
-EBUILD libvorbis-1.2.1_rc1-r1.ebuild 1666 RMD160 7d1559eb9f6fb2450c418914688d745d6e9f4b9e SHA1 27a1abc322fad26990b59e73b3461277a9d886ff SHA256 a6ba565300cf7b8b350ccfa37cb96bbc552dcc4e24a613db79aedc758877856a
+DIST libvorbis-1.2.2.tar.gz 1475590 RMD160 10cefdd540a3f55b6650eed7f1fbe11df463cae4 SHA1 629890c77c6abb56243232f25578c466e27950c7 SHA256 e1c23cc3fdd9d07cdee3441ca44918987d995ea7ea457ddf61b430ac5a6b361d
 EBUILD libvorbis-1.2.1_rc1-r2.ebuild 1670 RMD160 b78b021bd412b0604263290dcb930346842c5b8b SHA1 087347c3e1c1b0d2a4f07fa44f59485ae656154d SHA256 a494f1c39def6cba2bc16f8abf7407d44240902026a4d59f9f66ac165af0f579
 EBUILD libvorbis-1.2.1_rc1-r3.ebuild 1710 RMD160 0b99e8d9524d8f36f33152572a5b8b99b4d8bf02 SHA1 022aea1db8ea1455456b9a7700422acceff59807 SHA256 2014e2dfd3c2e8fc75c7e4a9636389f6674b9073c5f948f6747c8635f2f75049
 EBUILD libvorbis-1.2.1_rc1.ebuild 1440 RMD160 53da95af78929721a1cf67d3f46594f894ca20e6 SHA1 268bd6531b0cc6f8154b6134a527b316b407381d SHA256 508a7476adaf7cb7b4dc4b75b4a276fc07a8fbbbd18eedd9ae4c9e2aa87ac466
-MISC ChangeLog 16177 RMD160 ee5f573e192f41afae56afb6a44faf87dd0ce0f6 SHA1 d2512a1a331ef59ba8001523e4c362864cbb1a38 SHA256 84d354b5728a5152cf415e5ba2995b65be30c49a064dd2a509ced908ca4846b1
+EBUILD libvorbis-1.2.2.ebuild 1462 RMD160 a4344e5824f8e5dad5f831f329f0bf8cb018c27c SHA1 17ca4c2a5a280e087ce6c53a9c098af491d8e721 SHA256 d72ecf0d2d725d6364bb1bafd2b7fedc23706fc703316e7801a902eec1c50027
+MISC ChangeLog 16358 RMD160 001f8baabfe5fb0b3847341f6f95e4722ad0e111 SHA1 8bd5a69c87644bd22ed16ac2645e593b725caf12 SHA256 426812c677f65448ecc434506737ba98ad0b5edbb785d7c7bccfef7e0caf2b2b
 MISC metadata.xml 728 RMD160 c02aed6825c5e36bff858e8404816204a563c5c2 SHA1 45fb5800245f53ce40130dde19e44f6bbc084697 SHA256 58879305de6d2611c211af9b6db677e6fe39ba44aa17463b7f4afd76f7cb781e
