@@ -1,61 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/libvorbis-1.2.1_rc1-r1.ebuild,v 1.2 2008/08/06 17:33:42 yngwin Exp $
-
-EAPI=1
-inherit autotools flag-o-matic eutils toolchain-funcs
-
-MY_P=${P/_/}
-DESCRIPTION="The Ogg Vorbis sound file format library with aoTuV patch"
-HOMEPAGE="http://xiph.org/vorbis"
-SRC_URI="http://people.xiph.org/~giles/2008/${MY_P}.tar.bz2
-	aotuv? ( mirror://gentoo/aotuv-b5.5-1.2.1rc1.diff.bz2 )"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x86-solaris"
-IUSE="+aotuv doc"
-
-RDEPEND=">=media-libs/libogg-1"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
-S="${WORKDIR}/${MY_P}"
-
-src_unpack() {
-	unpack ${MY_P}.tar.bz2
-	cd "${S}"
-	use aotuv && epatch "${DISTDIR}"/aotuv-b5.5-1.2.1rc1.diff.bz2
-
-	AT_M4DIR=m4 eautoreconf # need new libtool for interix
-
-	epunt_cxx #74493
-
-	# Insane.
-	sed -i -e "s:-O20::g" -e "s:-mfused-madd::g" configure
-	sed -i -e "s:-mcpu=750::g" configure
-}
-
-src_compile() {
-	# gcc-3.4 and k6 with -ftracer causes code generation problems #49472
-	if [[ "$(gcc-major-version)$(gcc-minor-version)" == "34" ]]; then
-		is-flag -march=k6* && filter-flags -ftracer
-		is-flag -mtune=k6* && filter-flags -ftracer
-		replace-flags -Os -O2
-	fi
-
-	econf
-	emake || die "emake failed."
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
-
-	rm -rf "${ED}"/usr/share/doc/${MY_P}
-	dodoc AUTHORS CHANGES README todo.txt
-	use aotuv && dodoc aoTuV_README-1st.txt aoTuV_technical.txt
-	if use doc; then
-		docinto txt
-		dodoc doc/*.txt
-		dohtml -r doc
-	fi
-}
