@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libvorbis
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.116 2009/06/13 14:08:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.117 2009/06/25 09:20:37 aballier Exp $
+
+*libvorbis-1.2.2 (25 Jun 2009)
+
+  25 Jun 2009; Alexis Ballier <aballier@gentoo.org> +libvorbis-1.2.2.ebuild:
+  version bump, by Arseny Solokha <b0ntrict0r@yandex.ru>, bug #275349
 
   13 Jun 2009; Raúl Porcel <armin76@gentoo.org>
   libvorbis-1.2.1_rc1-r2.ebuild:
